<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/createnew"
    tools:context=".newuser">

    <TextView
        android:id="@+id/createuser"
        android:layout_width="265dp"
        android:layout_height="136dp"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/createUser"
        android:textColor="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailforcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/emailofhint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createuser" />

    <EditText
        android:id="@+id/createnewpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hintofpassword"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailforcreate" />

    <TextView
        android:id="@+id/password"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/Email"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createuser" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="98dp"
        android:layout_height="87dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailforcreate" />

    <TextView
        android:id="@+id/createAccount"
        style="@style/CommonStyleForTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/CreateAccount"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createnewpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>