<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_two"
    android:textAlignment="gravity"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="265dp"
        android:layout_height="136dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/commonStyleforText"
        android:layout_marginStart="64dp"
        android:layout_marginTop="152dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/password"
        style="@style/commonStyleforText"
        android:layout_width="316dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/submit"
        android:layout_width="151dp"
        android:layout_height="59dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="68dp"
        android:width="30sp"
        android:height="30sp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/autour_one"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/createNew"
        android:text="@string/CreateNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        style="@style/CommonStyleForTextView" />

    <ProgressBar
        android:id="@+id/progressBar_front"
        style="?android:attr/progressBarStyle"
        android:layout_width="121dp"
        android:layout_height="99dp"
        android:layout_marginTop="324dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>