<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebackground"
    tools:context=".SnakeGame">

    <Button
        android:id="@+id/startGame"
        style="@style/commonStyleforText"
        android:layout_width="186dp"
        android:layout_height="70dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/button_style"
        android:text="@string/StartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="410dp"
        android:layout_height="359dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/snake" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:contentDescription="@string/ContentDescriptionofSnake"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/snake" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="141dp"
        android:layout_height="44dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="62dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Time: 10"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/knewave"
        android:gravity="center"
        android:text="Score: 0"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loiginOut"
        style="@style/CommonStyleForTextView"
        android:layout_width="137dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:drawableLeft="@drawable/signout"
        android:fontFamily="@font/archivo_black"
        android:text="@string/LogOut"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>